<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.PAM.FullscreenContainer"
    tools:context=".ChooseModel">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ImageButton
        android:id="@+id/imgBtnBackCM"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imgBtnBackContentDescription"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/pam_left_arrow" />

    <FrameLayout
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/btnSpiderModel1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgBtnModelsContentDescription"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/spider" />

        <ImageButton
            android:id="@+id/btnSpiderModel2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgBtnModelsContentDescription"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/spider" />

        <ImageButton
            android:id="@+id/btnSpiderModel3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgBtnModelsContentDescription"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/spider" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.PAM.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent"/>
    </FrameLayout>

</FrameLayout>