<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/webLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_web_dark"
    android:theme="@style/ThemeOverlay.PAM.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.PAM.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" />

        <ImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/left_arrow_white"
            android:contentDescription="@string/imgBtnBackContentDescription"
            android:scaleType="fitCenter"/>


        <ImageView
            android:id="@+id/imgFly"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/fly" />

        <EditText
            android:id="@+id/txtPoints"
            android:layout_width="353dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:backgroundTint="@android:color/transparent"
            android:ems="15"
            android:enabled="false"
            android:gravity="right"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <ImageView
            android:id="@+id/imgAngrySpider"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="200dp"
            app:srcCompat="@drawable/angryspider" />

        <TextView
            android:id="@+id/txtGameOver"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:text="@string/txtGameOver"
            android:textColor="@color/white"
            android:textSize="100dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtGameOverPoints"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/txtPoints"
            android:textColor="@color/white"
            android:textSize="60dp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btnChangeMode"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right|bottom"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/change_mode" />


    </FrameLayout>

</FrameLayout>